@@ -18,6 +18,7 @@ MVC 6
 - NuGet assemblies are now strong named like the Microsoft ones.
 - gulpfile.js JSLint Fixes
 - webroot setting removed from project.json (https://github.com/aspnet/Announcements/issues/94).
+- ApplicationBasePath no longer needs to be set in Startup.Configuration.cs (https://github.com/aspnet/Announcements/issues/88).
 
 Version 2.7.0
 MVC 5
